# happy-llm

./: .gitignore  README.md  pyproject.toml
Extra-Chapter/MiniMind-in-Depth/: README (1).md
Extra-Chapter/MiniMind-in-Depth/src/: 10-DPO-大模型对齐训练的新范式.md  11-LoRA-LLM轻量化微调的利器.md  3-原始Transformer的位置编码及其缺陷.md  4-旋转位置编码原理与应用全解析.md  6-从稠密到稀疏，详解专家混合模型MOE.md
docs/: README.md  _sidebar.md
docs/chapter1/: 第一章 NLP基础概念.md
docs/chapter2/: 2.1 注意力机制.md  2.3 搭建一个Transformer.md  第二章 Transformer架构.md
docs/chapter2/code/: transformer.py
docs/chapter3/: 第三章 预训练语言模型.md
docs/chapter4/: 第四章 大语言模型.md
docs/chapter5/: 第五章 动手搭建大模型.md
docs/chapter5/code/: ddp_pretrain.py  k_model.py  train_tokenizer.py
docs/chapter6/: readme.md  第六章 大模型训练流程实践.md
docs/chapter6/code/: pretrain.py  requirements.txt
docs/chapter7/: 第七章 大模型应用.md
docs/chapter7/RAG/: .env_example  utils.py
scratch_llm/: README.md  __init__.py  config.py  tokenizer.py
scratch_llm/data/: __init__.py  dataset.py  jsonl.py
scratch_llm/docs/: API_REFERENCE.md  GIT_WORKFLOW.md  IMPLEMENTATION_ORDER.md
scratch_llm/inference/: __init__.py  generation.py
scratch_llm/model/: __init__.py  attention.py  blocks.py  mlp.py  norm.py  rope.py  transformer.py
scratch_llm/training/: __init__.py  checkpoint.py  loop.py  lr.py
scratch_llm/utils/: __init__.py  params.py  seed.py
scripts/: 01_train_tokenizer.py  02_pretrain.py  03_generate.py
tests/: test_contracts.py
